--- a/index.html
+++ b/index.html
@@ -13,5 +13,27 @@ color:red;
 <h1>
 hi everyone , this is Karim
 </h1>
+
+  <p>Most populous states and cities within those states:</p> 
+<ol> 
+     <li>California
+          <ol>
+             <li>Los Angeles</li>
+             <li>San Diego</li> 
+          </ol>
+     </li>
+     <li>Texas
+          <ol>
+             <li>Houston</li>
+             <li>San Antonio</li> 
+          </ol>
+     </li>
+     <li>Florida
+          <ol>
+             <li>Jacksonville</li>
+             <li>Miami</li>
+          </ol>
+     </li>
+</ol>
 </body>
 </html>
